Fixed `.col-no-gap` incorrectly working on mobile and added a test.

--- a/components/00-base/base.stories.scss
+++ b/components/00-base/base.stories.scss
@@ -167,6 +167,11 @@
 
     border-bottom: solid ct-particle(0.125);
     margin-bottom: ct-spacing(2);
+    margin-top: ct-spacing(2);
+
+    &:first-child {
+      margin-top: 0;
+    }
 
     code {
       text-transform: lowercase;
