--- a/components/00-base/grid/grid.scss
+++ b/components/00-base/grid/grid.scss
@@ -123,12 +123,15 @@
 }
 
 .col-no-gap {
-  &:not(:first-child) {
-    padding-left: 0;
-  }
+  // Remove the offsets starting from the next breakpoint from the lowest one.
+  @include ct-breakpoint(ct-breakpoint-next($ct-grid-lowest-breakpoint, key)) {
+    &:not(:first-child) {
+      padding-left: 0;
+    }
 
-  &:not(:last-child) {
-    padding-right: 0;
+    &:not(:last-child) {
+      padding-right: 0;
+    }
   }
 }
 
